ui_tests/assignment_3.stderr
error: mismatched types: a:A[] b:()
  ┌─ main.box:5:5
  │
5 │     a := a := new A {};
  │     ^^^^^^^^^^^^^^^^^^

