ui_tests/assignment_3.box
type A {}

fn foo() {
    let a = new A {};
    a := a := new A {};
}